added login page

--- a/web-d-experiments/exp1/experiment-1_table.html
+++ b/web-d-experiments/exp1/experiment-1_table.html
@@ -14,15 +14,15 @@
             <th colspan="4">ABES ENGINEERING COLLEGE BOOK STORE</th>
         </tr>
         <tr>           
-            <td>HOME</td>
-            <td><a href="login.html" target="loginframe">LOG IN</a></td>
+            <td><a href="description.html" target="content">HOME</a></td>
+            <td><a href="login.html" target="content">LOG IN</a></td>
             <td>REGISTRATION</td>
-            <td>CATALOGUE</td>
+            <td><a href="catalogue.html">CATALOGUE</a></td>
             <td>CART</td>
             </tr>
         <tr>
             <td><a href="#">CSE</a></td> 
-            <td colspan="4" rowspan="4" align="center"><iframe name="loginframe" src="login.html">This is a description box</iframe></td>    
+            <td colspan="4" rowspan="4" align="center"><iframe name="content"></iframe></td>    
         </tr>
         <tr>
             <td><a href="#">ECE</a></td>  
