--- a/web-d-experiments/exp1/catalogue.html
+++ b/web-d-experiments/exp1/catalogue.html
@@ -4,8 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="catalogue.css">
+    <link rel="stylesheet" href="table.css" >
 </head>
 <body>
+    <div class="table-container">
+    <table class="main">
+        <tr >
+            <td><img src="xml.jpg" height="50px" width="50px"></td>
+            <td>Book : XML Bible<br>
+                Author : Winston<br>
+                Publication : Wiely
+            </td>
+            <td>$40.5</td>
+            <td><button class="addbtn" onclick=""> 
+                <span class="icon"><img src="btn.jpg" alt="icon" style="width:20px; height:20px;" ></span>
+                <span class="text"> Add to cart </span></button></td>
+        </tr>
+        <tr>
+            <td><img src="ai.webp"  height="50px" width="50px"> </td>
+            <td>Book : AI<br>
+                Author : S. Russel <br>
+                Publication : Princetonhall
+            </td>
+            <td>$63</td>
+            <td><button class="addbtn"> 
+                <span class="icon"><img src="btn.jpg" alt="icon" style="width:20px; height:20px;" ></span>
+                <span class="text"> Add to cart </span> </button></td>
+        </tr>
+        <tr>
+            <td><img src="java.webp" height="50px" width="50px"></td>
+            <td>Book : Java 2 <br>
+                Author : Watson <br>
+                Publication : BPB Publications 
+            </td>
+            <td>$35.5</td>
+            <td><button class="addbtn"> 
+                <span class="icon"><img src="btn.jpg" alt="icon" style="width:20px; height:20px;"></span>
+                <span class="text">  Add to cart </span></button></td>
+        </tr>
+        <tr>
+            <td><img src="book.webp" height="50px" width="50px"></td>
+            <td>Book : HTML in 24 hours <br>
+                Author : Sam Peter<br>
+                Publication : Sampublication </td>
+            <td>$50</td>
+            <td>
+                <button class="addbtn">
+                <span class="icon"><img src="btn.jpg" alt="icon" style="width:20px; height:20px;"> </span>
+                <span class="icon"> Add to cart </span></button></td>
+         </tr>
+
+
+
+
+    </table>
+    </div>
     
 </body>
 </html>
