--- a/web-d-experiments/exp1/experiment-1_table.html
+++ b/web-d-experiments/exp1/experiment-1_table.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="table.css" >
     <title>Book Store</title>
 </head>
-<body>
-    <table border="10"  cellpadding="5">
-        <tr bgcolor="beige">
+<body >
+     <table border="10"  cellpadding="5" class="main">
+        <tr bgcolor="beige" >
             <th>
                 <image src="abeslogo.webp" height="90" width="90"></image>
             </th>
@@ -16,13 +17,13 @@
         <tr>           
             <td><a href="description.html" target="content">HOME</a></td>
             <td><a href="login.html" target="content">LOG IN</a></td>
-            <td>REGISTRATION</td>
-            <td><a href="catalogue.html">CATALOGUE</a></td>
-            <td>CART</td>
+            <td><a href="registration.html" target="content">REGISTRATION</a></td>
+            <td><a href="catalogue.html" target="content">CATALOGUE</a></td>
+            <td><a href="cartpage.html" target="content">CART</a></td>
             </tr>
         <tr>
             <td><a href="#">CSE</a></td> 
-            <td colspan="4" rowspan="4" align="center"><iframe name="content"></iframe></td>    
+            <td colspan="4" rowspan="4" align="center"><iframe name="content" class="frame"></iframe></td>    
         </tr>
         <tr>
             <td><a href="#">ECE</a></td>  
@@ -33,6 +34,7 @@
         <tr>
             <td><a href="#">CIVIL</a></td>   
         </tr>
-    </table>   
+    </table> 
+     
 </body>
 </html>
